[package]
name = "camera_photo_statistics"
version = "0.1.0"
edition = "2021"
include = ["report/index.html"]

[dependencies]
kamadak-exif = "0.5.5"
lazy_static = "1.5.0"
rayon = "1.10.0"
walkdir = "2.5.0"
axum = "0.6.1"
tokio = { version = "1.24.1", features = ["full"] }
serde = { version = "1.0.203", features = ["derive"] }
serde_json = { version = "1.0.117" }
